Configuracion final de los botones y agregando las secciones de blog y testimoniales. Hasta aqui finaliza el html de la pagina principal

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,3 +12,6 @@
 @import 'layout/navegacion';
 @import 'layout/iconos';
 @import 'layout/anuncio';
+@import 'layout/contactar';
+@import 'layout/inferior';
+@import 'layout/testimoniales';
