--- a/src/scss/layout/_anuncio.scss
+++ b/src/scss/layout/_anuncio.scss
@@ -17,18 +17,19 @@
   margin: 0;
  }
 
- .precio {
-  color: $verde;
-  font-weight: $bold;
-  font-size: 3rem;
- }
+}
 
+.precio {
+ color: $verde;
+ font-weight: $bold;
+ font-size: 3rem;
 }
 
 .icono-caracteristicas {
  display: flex;
  list-style: none;
  padding: 0;
+ max-width: 40rem;
 
  li {
   flex: 1;
@@ -43,4 +44,8 @@
    font-weight: $black;
   }
  }
+}
+
+.contenido-anuncio {
+ padding: 2rem;
 }
