Se creo la sección de contactos y se aplicarón los estilos correspondientes al formulario

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -32,8 +32,10 @@
     padding: 1rem 3rem;
     text-align: center;
     margin-top: calc($separacion / 2);
+    border: none;
 
     &:hover {
         background-color: darken($bgColor, 10);
+        cursor: pointer;
     }
 }
